--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
+
+  "noImplicitAny": false,
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
