--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.4.0",
